[package]
name = "kv-log"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
trait-variant = "0.1.2"
tokio = { version = "1.49.0", features = ["full"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
crc32fast = "1.5.0"  # Adjust version as needed; rc.3 is common for 2.x
fs2 = "0.4.3"
thiserror = "2.0.17"

[dev-dependencies]
futures = "0.3"